--- a/q_caroussel/style.css
+++ b/q_caroussel/style.css
@@ -18,20 +18,18 @@ body {
 }
 
 .active {
-    display: flex;
+    display: inline;
 }
 
 .button_prev, .button_next {
-    padding: 5px 10px;
+    padding: 0 10px;
     position : absolute;
     cursor: pointer;
     border: none;
-    background-color: black;
     color: white;
     top: 50%;
     transform: translate(0, -50%);
     background: rgba(0, 0, 0, .3);
-    /* border-radius: 0 10px 10px 0; */
     transition: all .5s;
     font-size: 2rem;
     font-weight: bold;
@@ -39,10 +37,29 @@ body {
 
 .button_next {
     right: 0;
-    /* border-radius: 10px 0 0 10px; */
+}
+
+.button_prev {
+    left: 0;
 }
 
 .button_prev:hover,
 .button_next:hover {
-    background-color: black;
+    background-color: rgba(0, 0, 0, .7);
+}
+
+.puce {
+    width: 20px;
+    height: 20px;
+    border: none;
+    background:rgba(0, 0, 0, .3);
+    cursor: pointer;
+}
+
+.puce:hover {
+    background:rgba(0, 0, 0, .7);
+}
+
+.puce-active {
+    background: rgba(0, 0, 0, .7);
 }
