--- a/z_formulaire/scss/button.scss
+++ b/z_formulaire/scss/button.scss
@@ -17,13 +17,13 @@
     transition: box-shadow 0.2s;
   }
   &-primary {
-    background: limegreen;
+    background: forestgreen;
     color: white;
   }
   &-secondary {
-    border: 1px solid limegreen;
+    border: 1px solid forestgreen;
     background: white;
-    color: limegreen;
+    color: forestgreen;
   }
 }
 
