change size dot every 5 minutes

--- a/39_clock/style.css
+++ b/39_clock/style.css
@@ -59,6 +59,11 @@ body {
     transform: translate(-50%, -50%)
 }
 
+.big_dot {
+    width: 10px;
+    height: 10px;
+}
+
 .dots {
     position: absolute;
     top: 50%;
