--- a/41_pendule/style.css
+++ b/41_pendule/style.css
@@ -5,10 +5,16 @@ body {
 #container {
     position: relative;
     margin: auto;
-    margin-top: 200px;
+    margin-top: 300px;
     width: 200px;
     height: 200px;
     /* background-color: chartreuse; */
+}
+
+button {
+    display: block;
+    margin: 10px;
+    font-size: larger;
 }
 
 #joint_1 {
@@ -25,8 +31,7 @@ body {
 #arm_1 {
     position: absolute;
     width: 200px;
-    height: 5px;
-    background-color: black;
+    border: solid black 2px;
     top: 50%;
     left: 50%;
     transform: translate(0%, -50%);
@@ -46,8 +51,7 @@ body {
 #arm_2 {
     position: absolute;
     width: 100px;
-    height: 5px;
-    background-color: black;
+    border: solid black 2px;
     top: 50%;
     left: 50%;
     transform: translate(0%, -50%);
