--- a/41_pendule/style.css
+++ b/41_pendule/style.css
@@ -18,14 +18,19 @@ button {
 }
 
 .joint {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    /* background-color: blue; */
-    top: 50%;
-    left: 100%;
-    transform: translate(0%, -50%)
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  /* background-color: blue; */
+  top: 50%;
+  left: 100%;
+  transform: translate(0%, -50%)
+}
+
+
+#container > .joint {
+  left: 50%;
 }
 
 .arm {
