--- a/42_pendulum_2/style.css
+++ b/42_pendulum_2/style.css
@@ -1,24 +1,24 @@
 #arm_canvas {
-    position: absolute;
+    position: absolute
 }
 
 #draw_canvas {
-    position: absolute;
+    position: absolute
 }
 
 .my_buttons {
     position: absolute;
-    left: 50px;
+    left: 50px
 }
 
 button {
     display: block;
     border: none;
     padding: 10px;
-    width: 100px;
+    width: 100px
 }
 
 button:hover {
     background-color: rgb(20, 20, 20);
-    color: white;
+    color: white
 }
