--- a/10_guess_number/style.css
+++ b/10_guess_number/style.css
@@ -1,3 +1,13 @@
 html, body, .container-table {
     height: 100%;
 }
+
+#message {
+    color: blueviolet;
+    margin-top: 10px;
+    height: 30px
+}
+
+.container {
+    margin: 100px;
+}
