--- a/44_cv_css/style.css
+++ b/44_cv_css/style.css
@@ -76,3 +76,7 @@ body {
     background: white;
     z-index: -1;
 }
+
+.card:nth-child(2), .card:nth-child(2)::before {
+    background-color: blueviolet;
+}
